feat: remove activity feature
